# rustiful

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
examples/: Cargo.toml
examples/migrations/20170430124406_create_todos/: up.sql
examples/src/: db.rs  errors.rs  lib.rs  todo.rs
jsonapi/: Cargo.toml
jsonapi-derive/: Cargo.toml
jsonapi-derive/src/: json.rs  lib.rs  params.rs  request.rs  util.rs
jsonapi-hyper/: Cargo.toml
jsonapi-hyper/tests/: server.rs
jsonapi-rocket/: Cargo.toml
jsonapi-test/: Cargo.toml
jsonapi-test/src/: lib.rs
jsonapi-test/tests/: lib.rs  request_tests.rs  service_tests.rs
jsonapi/src/: array.rs  data.rs  errors.rs  id.rs  iron.rs  iron_handlers.rs  lib.rs  object.rs  params.rs  query_string.rs  queryspec.rs  request.rs  service.rs  sort_order.rs  try_from.rs
rustiful/: Cargo.toml
rustiful-derive/: Cargo.toml
rustiful-derive/src/: builder.rs  json.rs  lib.rs  params.rs  util.rs
rustiful-test/: .env  Cargo.toml
rustiful-test/migrations/20170226214138_create_tests/: up.sql
rustiful-test/tests/: conversion_tests.rs  lib.rs  params_tests.rs  post_and_patch_tests.rs  request_tests.rs  service_tests.rs
rustiful-test/tests/iron/: mod.rs  post_and_patch_tests.rs  request_tests.rs
rustiful-test/tests/resources/: diesel_resource.rs  mock_resource.rs  mod.rs  simple_resources.rs
rustiful/src/: array.rs  builder.rs  container.rs  data.rs  error.rs  errors.rs  id.rs  iron.rs  json_option.rs  lib.rs  object.rs  params.rs  request.rs  resource.rs  service.rs  sort_order.rs  to_json.rs  try_from.rs
rustiful/src/errors/: from_request_error.rs  id_parse_error.rs  mod.rs  query_string_parse_error.rs  repository_error.rs  request_error.rs
rustiful/src/iron/: from_request.rs  mod.rs  router_builder.rs
rustiful/src/iron/handlers/: delete.rs  errors.rs  get.rs  index.rs  mod.rs  patch.rs  post.rs
rustiful/src/json/: comma_separated.rs  mod.rs  phantomdata.rs
rustiful/src/request/: delete.rs  get.rs  index.rs  mod.rs  patch.rs  post.rs
