[package]
name = "rustiful-examples"
version = "0.1.0"
authors = ["Blake Pettersson <blake.pettersson@gmail.com>"]

[dependencies]
rustiful = { path = "../rustiful", features = ["uuid"] }
rustiful-derive = { path = "../rustiful-derive", features = ["uuid"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }

#diesel = { version = "0.12.0", features = ["postgres", "uuid"] }
#diesel_codegen = { version = "0.12.0", features = ["postgres"] }
#r2d2-diesel = { version = "0.12" }
r2d2-diesel = { path = "../../r2d2-diesel" }
diesel = { path = "../../diesel/diesel", features = ["postgres", "uuid"] }
diesel_codegen = { path = "../../diesel/diesel_codegen", features = ["postgres"] }

dotenv = "0.8.0"
iron = "0.5.*"
clippy = {version = "0.0.123", optional = true }
r2d2 = { version = "0.7" }

lazy_static = "0.2"

[features]
default = []
dev = ["clippy"]
