[package]
name = "jsonapi"
version = "0.1.0"
authors = ["Blake Pettersson <blake.pettersson@gmail.com>"]

[lib]

[dependencies]
serde = "0.9.*"
serde_derive = "0.9.*"
serde_json = "0.9"
uuid = { version = "0.4.*", optional = true, features = ["serde"] }

router = { version = "0.5.*", optional = true }
iron = { version = "0.5.*", optional = true }