[package]
name = "rustiful-derive"
version = "0.1.0"
authors = ["Blake Pettersson <blake.pettersson@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
rustiful = { path = "../rustiful" }
syn = "0.11"
quote = "0.3"
Inflector = "*"
clippy = {version = "0.0.123", optional = true}

[features]
default = []
dev = ["clippy"]
