[package]
name = "rustiful-test"
version = "0.1.0"
authors = ["Blake Pettersson <blake.pettersson@gmail.com>"]

[dependencies]
rustiful = { path = "../rustiful", features = ["uuid", "iron", "router", "bodyparser"] }
rustiful-derive = { path = "../rustiful-derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }

diesel = { version = "0.12.0", features = ["sqlite"] }
diesel_codegen = { version = "0.12.0", features = ["sqlite"] }
dotenv = "0.8.0"
iron = "0.5.*"
router = "0.5.*"
iron-test = "0.5.*"
clippy = {version = "0.0.123", optional = true}
r2d2 = { version = "0.7" }
r2d2-diesel = { version = "0.12" }
lazy_static = "0.2"
bodyparser = { version = "0.7.*" }
persistent = "0.3.0"

[features]
default = []
dev = ["clippy"]

