[package]
name = "rustiful-test"
version = "0.1.0"
authors = ["Blake Pettersson <blake.pettersson@gmail.com>"]

[dependencies]
rustiful = { path = "../rustiful", features = ["uuid"] }
rustiful-derive = { path = "../rustiful-derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }

diesel = { version = "0.13", features = ["sqlite"] }
diesel_codegen = { version = "0.13", features = ["sqlite"] }
dotenv = "0.8"
iron = "0.5"
iron-test = "0.5"
clippy = {version = "0.0.123", optional = true }
r2d2 = { version = "0.7" }
r2d2-diesel = { version = "0.13" }
lazy_static = "0.2"

[features]
default = []
dev = ["clippy"]
