[package]
name = "rustiful"
version = "0.1.0"
authors = ["Blake Pettersson <blake.pettersson@gmail.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/blakepettersson/rustiful"
description = "This crate is for creating a JSONAPI backend, backed by Iron."

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.10"
uuid = { version = "0.5", optional = true, features = ["serde"] }
autoimpl = "0.1"
url = "1.4"

router = { version = "0.5", optional = true }
iron = { version = "0.5", optional = true }
bodyparser = { version = "0.7", optional = true }
clippy = { version = "0.0.123", optional = true }
persistent = { version = "0.3", optional = true }

[features]
default = ["iron", "router", "bodyparser", "persistent"]
dev = ["clippy", "iron", "router", "bodyparser", "persistent"]

[dev-dependencies]
iron = "0.5"
router = "0.5"
iron-test = "0.5"
uuid = { version = "0.4", features = ["serde", "v4"] }
